--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,11 +59,22 @@ repos:
     rev: v3.1.0
     hooks:
       - id: add-trailing-comma
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: "v1.10.0"
-  #   hooks:
-  #     - id: mypy
-  #       args: ["--install-types"]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.10.0"
+    hooks:
+      - id: mypy
+        args: ["--install-types"]
+  - repo: local
+    hooks:
+    - id: pytest-check
+      name: pytest-check
+      stages: [commit]
+      types: [python]
+      entry: pytest
+      language: system
+      pass_filenames: false
+      always_run: true
+      args: ["tests/ut/"]
   - repo: https://github.com/rubik/xenon
     rev: v0.9.1
     hooks:
