Fix conversion features following recent commits

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,8 +2,9 @@
 python_version = 3.11
 warn_unused_configs = True
 warn_redundant_casts = True
+exclude = (xarray_eop/conversion/.*)
 
-[mypy-sentineltoolbox.*]
+[mypy-xarray_eop.*]
 disallow_any_generics = True
 disallow_subclassing_any = True
 disallow_untyped_defs = True
