--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@
 default_language_version:
   python: python3.11
 default_stages: [commit]
-exclude: '.*\.zarr|xarray_eop/conversion/.*'
+exclude: '.*\.zarr|xarray_eop/conversion/.*\.py'
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -59,11 +59,11 @@ repos:
     rev: v3.1.0
     hooks:
       - id: add-trailing-comma
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.10.0"
-    hooks:
-      - id: mypy
-        args: ["--install-types"]
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: "v1.10.0"
+  #   hooks:
+  #     - id: mypy
+  #       args: ["--install-types"]
   - repo: local
     hooks:
     - id: pytest-check
