--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,25 @@ name: CI
 on: [push]
 
 jobs:
-  linter:
+  # linter:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       python-version: ["3.11"]
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - name: Set up Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v3
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Install dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       pip install .[linter]
+  #   - name: Analysing the code with flake8
+  #     run: |
+  #       python -m flake8 xarray_eop tests --output-file linter.txt
+  formatter:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,7 +35,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[linter]
-    - name: Analysing the code with flake8
+        pip install .[formatter]
+    - name: Analysing the code with black and isort
       run: |
-        python -m flake8 xarray_eop tests --output-file linter.txt
+        - python -m black --check --diff .
+        - python -m isort xarray_eop tests --check --diff
