--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,17 +64,17 @@ repos:
   #   hooks:
   #     - id: mypy
   #       args: ["--install-types"]
-  - repo: local
-    hooks:
-    - id: pytest-check
-      name: pytest-check
-      stages: [commit]
-      types: [python]
-      entry: pytest
-      language: system
-      pass_filenames: false
-      always_run: true
-      args: ["tests/ut/"]
+  # - repo: local
+  #   hooks:
+  #   - id: pytest-check
+  #     name: pytest-check
+  #     stages: [commit]
+  #     types: [python]
+  #     entry: pytest
+  #     language: system
+  #     pass_filenames: false
+  #     always_run: true
+  #     args: ["tests/ut/"]
   - repo: https://github.com/rubik/xenon
     rev: v0.9.1
     hooks:
