--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,26 @@ jobs:
       run: |
         python -m black --check --diff .
         python -m isort xarray_eop tests --check --diff --profile black
+
+  unit-tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install .[tests]
+    - name: Running unit tests with pytest
+      run: |
+        python -m pytest \
+          --cov=xarray_eop \
+          --junit-xml=.reports/TEST-pytests.xml \
+          --cov-report=xml:.reports/coverage.xml \
+          -m unit
