--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,9 @@ formatter = [
     "black",
     "isort"
 ]
+doc-cov = [
+    "docstr-coverage >= 2.2.0"
+]
 tests = [
     "pytest",
     "pytest-cov",
