CI: update docs.yaml

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,6 +4,9 @@ on: [push, pull_request, workflow_dispatch]
 
 env:
   DOCS: docs/source
+  AWS_ACCESS_KEY_ID : ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_ENDPOINT_URL : ${{ secrets.AWS_ENDPOINT_URL }}
 
 permissions:
   contents: write
