--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -29,7 +29,7 @@ jobs:
           pip install .[doc]
       - name: Sphinx build
         run: |
-          sphinx-build -M html ${DOCS} _build
+          sphinx-build ${DOCS} _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/actions' }}
