Conversion: change row_time into time_stamp in OLCI L1 mapping

--- a/xarray_eop/conversion/conf/simplified_mappings/S3_OL_1_mapping.json
+++ b/xarray_eop/conversion/conf/simplified_mappings/S3_OL_1_mapping.json
@@ -18,7 +18,7 @@
             "time_coordinates.nc": [
                 [
                     "time_stamp",
-                    "row_time"
+                    "time_stamp"
                 ]
             ],
             "Oa01_radiance.nc": [
