--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,27 @@ jobs:
         python -m black --check --diff .
         python -m isort ${SOURCES} ${TESTS} --check --diff --profile black
 
+  security:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install .[security]
+    - name: Security checks
+      run: |
+        pip freeze > requirements.txt
+        python -m bandit -c bandit.yml -r ${SOURCES}
+        python -m bandit -c bandit.yml -r ${SOURCES} -f json -o vulnerability.json
+
   unit-tests:
     runs-on: ubuntu-latest
     strategy:
