--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,7 +142,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build release distribution
       run:
-        - pip wheel -w dist --no-deps .
+        pip wheel -w dist --no-deps .
     - name: Upload distributions
       uses: actions/upload-artifact@v4
       with:
